[CUR-872] Fix preview cut off issue

--- a/src/containers/App/style.scss
+++ b/src/containers/App/style.scss
@@ -2164,6 +2164,7 @@ a:hover {
   display: block;
   color: #fff;
   width: fit-content;
+  min-width: 190px;
   border-radius: 20px;
   text-align: center;
   font-size: 14px;
@@ -2926,25 +2927,6 @@ a:hover {
   .inline-block {
     display: inline-block;
   }
-
-  .react-confirm-alert-overlay {
-    background: rgba(0, 0, 0, 0.5) !important;
-    z-index: 1050;
-  }
-
-  .react-confirm-alert {
-    background: #fff !important;
-    padding: 25px;
-    border-radius: 5px;
-  }
-}
-
-.react-confirm-alert-overlay {
-  background: rgba(0, 0, 0, 0.6) !important;
-}
-
-.react-confirm-alert {
-  min-width: 650px;
 }
 
 .model-box-view {
